--- a/tags.html
+++ b/tags.html
@@ -179,6 +179,7 @@ rel="me"           href="https://fosstodon.org/@leblancfg"
           <li><a href="https://leblancfg.com/tag/gpu.html">GPU</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/gtx960.html">GTX960</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/jupyter.html">jupyter</a> (5)</li>
+          <li><a href="https://leblancfg.com/tag/learning.html">learning</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/linux.html">linux</a> (2)</li>
           <li><a href="https://leblancfg.com/tag/manjaro.html">manjaro</a> (2)</li>
           <li><a href="https://leblancfg.com/tag/matplotlib.html">matplotlib</a> (2)</li>
@@ -187,7 +188,9 @@ rel="me"           href="https://fosstodon.org/@leblancfg"
           <li><a href="https://leblancfg.com/tag/numpy.html">numpy</a> (5)</li>
           <li><a href="https://leblancfg.com/tag/nvidia.html">nvidia</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/productivity.html">productivity</a> (1)</li>
+          <li><a href="https://leblancfg.com/tag/programming.html">programming</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/python.html">python</a> (11)</li>
+          <li><a href="https://leblancfg.com/tag/rust.html">rust</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/scipy.html">scipy</a> (2)</li>
           <li><a href="https://leblancfg.com/tag/shapely.html">shapely</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/shell.html">shell</a> (2)</li>
@@ -205,7 +208,7 @@ rel="me"           href="https://fosstodon.org/@leblancfg"
 
 <footer>
 <p>
-  &copy; 2023  - This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/deed.en_US" target="_blank">Creative Commons Attribution-ShareAlike</a>
+  &copy; 2024  - This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/deed.en_US" target="_blank">Creative Commons Attribution-ShareAlike</a>
 </p>
 <p>
 Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a href="http://bit.ly/flex-pelican" target="_blank">Flex</a> theme
