--- a/benchmarks_writing_pandas_dataframe_SQL_Server.html
+++ b/benchmarks_writing_pandas_dataframe_SQL_Server.html
@@ -1234,6 +1234,7 @@ span.linenos.special { color: #000000; background-color: #ffffc0; padding-left: 
  .highlight pre  .cs { color: #3D7B7B; font-style: italic } /* Comment.Special */
  .highlight pre  .gd { color: #A00000 } /* Generic.Deleted */
  .highlight pre  .ge { font-style: italic } /* Generic.Emph */
+ .highlight pre  .ges { font-weight: bold; font-style: italic } /* Generic.EmphStrong */
  .highlight pre  .gr { color: #E40000 } /* Generic.Error */
  .highlight pre  .gh { color: #000080; font-weight: bold } /* Generic.Heading */
  .highlight pre  .gi { color: #008400 } /* Generic.Inserted */
@@ -1381,10 +1382,10 @@ span.linenos.special { color: #000000; background-color: #ffffc0; padding-left: 
 
 
 
-<div id="e2d2e5d1-0103-4120-8014-5d2892245fa9"></div>
+<div id="bc13a98f-9405-466b-a96c-e4c96c124291"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#e2d2e5d1-0103-4120-8014-5d2892245fa9');
+var element = $('#bc13a98f-9405-466b-a96c-e4c96c124291');
 
             setTimeout(function() {
                 var nbb_cell_id = 1;
@@ -1468,10 +1469,10 @@ No sqlalchemy_turbodbc version available
 
 
 
-<div id="28213ae7-c227-44af-aaf2-5c8b9964c615"></div>
+<div id="8ccda1ef-934c-4656-8b30-9d3b9cc80ef8"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#28213ae7-c227-44af-aaf2-5c8b9964c615');
+var element = $('#8ccda1ef-934c-4656-8b30-9d3b9cc80ef8');
 
             setTimeout(function() {
                 var nbb_cell_id = 20;
@@ -1538,10 +1539,10 @@ var element = $('#28213ae7-c227-44af-aaf2-5c8b9964c615');
 
 
 
-<div id="c08db2a3-970f-4248-9a94-64a383028f25"></div>
+<div id="2f1f20b3-1847-474a-9997-0f582a18af58"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#c08db2a3-970f-4248-9a94-64a383028f25');
+var element = $('#2f1f20b3-1847-474a-9997-0f582a18af58');
 
             setTimeout(function() {
                 var nbb_cell_id = 3;
@@ -1719,10 +1720,10 @@ var element = $('#c08db2a3-970f-4248-9a94-64a383028f25');
 
 
 
-<div id="1559a5c0-2849-496e-a62d-eb294d372cec"></div>
+<div id="0a41de13-4e85-4264-883d-a524ddc18cfe"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#1559a5c0-2849-496e-a62d-eb294d372cec');
+var element = $('#0a41de13-4e85-4264-883d-a524ddc18cfe');
 
             setTimeout(function() {
                 var nbb_cell_id = 4;
@@ -1780,10 +1781,10 @@ var element = $('#1559a5c0-2849-496e-a62d-eb294d372cec');
 
 
 
-<div id="deee5790-1d2a-445b-97db-9ab5bb764608"></div>
+<div id="540f5a02-c5fc-4746-8519-54f5ea82c8d8"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#deee5790-1d2a-445b-97db-9ab5bb764608');
+var element = $('#540f5a02-c5fc-4746-8519-54f5ea82c8d8');
 
             setTimeout(function() {
                 var nbb_cell_id = 5;
@@ -1857,10 +1858,10 @@ var element = $('#deee5790-1d2a-445b-97db-9ab5bb764608');
 
 
 
-<div id="d29259e3-a7d0-4920-b014-20a71eec5650"></div>
+<div id="6ee4e80f-c034-44b1-8458-1d361f248667"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#d29259e3-a7d0-4920-b014-20a71eec5650');
+var element = $('#6ee4e80f-c034-44b1-8458-1d361f248667');
 
             setTimeout(function() {
                 var nbb_cell_id = 6;
@@ -1939,10 +1940,10 @@ var element = $('#d29259e3-a7d0-4920-b014-20a71eec5650');
 
 
 
-<div id="b64afd05-6272-4370-9e35-9e95013749a2"></div>
+<div id="48fd1580-fd6c-4b1f-9cad-9fc444a5f51f"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#b64afd05-6272-4370-9e35-9e95013749a2');
+var element = $('#48fd1580-fd6c-4b1f-9cad-9fc444a5f51f');
 
             setTimeout(function() {
                 var nbb_cell_id = 7;
@@ -2004,10 +2005,10 @@ var element = $('#b64afd05-6272-4370-9e35-9e95013749a2');
 
 
 
-<div id="003bcdde-adda-44fd-9574-a5478742e63e"></div>
+<div id="79cd2da4-5b25-4139-91d6-033724c7f431"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#003bcdde-adda-44fd-9574-a5478742e63e');
+var element = $('#79cd2da4-5b25-4139-91d6-033724c7f431');
 
             setTimeout(function() {
                 var nbb_cell_id = 8;
@@ -2075,10 +2076,10 @@ var element = $('#003bcdde-adda-44fd-9574-a5478742e63e');
 
 
 
-<div id="898680c6-6204-4dec-973e-2d23140b1ef9"></div>
+<div id="58421f0e-aef9-4542-867f-ef4a6391642c"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#898680c6-6204-4dec-973e-2d23140b1ef9');
+var element = $('#58421f0e-aef9-4542-867f-ef4a6391642c');
 
             setTimeout(function() {
                 var nbb_cell_id = 9;
@@ -2153,10 +2154,10 @@ var element = $('#898680c6-6204-4dec-973e-2d23140b1ef9');
 
 
 
-<div id="4bc39b85-d383-4502-b754-4801d9a7caff"></div>
+<div id="346eece1-72d4-474a-b30a-4d62277c7a9a"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#4bc39b85-d383-4502-b754-4801d9a7caff');
+var element = $('#346eece1-72d4-474a-b30a-4d62277c7a9a');
 
             setTimeout(function() {
                 var nbb_cell_id = 10;
@@ -2231,10 +2232,10 @@ var element = $('#4bc39b85-d383-4502-b754-4801d9a7caff');
 
 
 
-<div id="30884530-a5bc-40b5-b921-8093efd1d669"></div>
+<div id="e24fbbd8-c8e6-4b17-a63c-1af070dbbf15"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#30884530-a5bc-40b5-b921-8093efd1d669');
+var element = $('#e24fbbd8-c8e6-4b17-a63c-1af070dbbf15');
 
             setTimeout(function() {
                 var nbb_cell_id = 11;
@@ -2310,10 +2311,10 @@ var element = $('#30884530-a5bc-40b5-b921-8093efd1d669');
 
 
 
-<div id="040d7222-2d37-4cd7-9279-8344c1f006d2"></div>
+<div id="0f695ab4-51de-40bf-89a2-1ece5ea8baea"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#040d7222-2d37-4cd7-9279-8344c1f006d2');
+var element = $('#0f695ab4-51de-40bf-89a2-1ece5ea8baea');
 
             setTimeout(function() {
                 var nbb_cell_id = 12;
@@ -2381,10 +2382,10 @@ var element = $('#040d7222-2d37-4cd7-9279-8344c1f006d2');
 
 
 
-<div id="5cb20e52-69f4-4dde-9a0a-b948c7c78352"></div>
+<div id="8d29416e-1dc4-4729-9500-749681f3d33d"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#5cb20e52-69f4-4dde-9a0a-b948c7c78352');
+var element = $('#8d29416e-1dc4-4729-9500-749681f3d33d');
 
             setTimeout(function() {
                 var nbb_cell_id = 13;
@@ -2451,10 +2452,10 @@ var element = $('#5cb20e52-69f4-4dde-9a0a-b948c7c78352');
 
 
 
-<div id="c8206df4-2459-4518-82c0-282131cbe877"></div>
+<div id="c49aaaef-4311-4ac6-b3c0-79b699f6b71d"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#c8206df4-2459-4518-82c0-282131cbe877');
+var element = $('#c49aaaef-4311-4ac6-b3c0-79b699f6b71d');
 
             setTimeout(function() {
                 var nbb_cell_id = 14;
@@ -2554,10 +2555,10 @@ var element = $('#c8206df4-2459-4518-82c0-282131cbe877');
 
 
 
-<div id="b43d78ca-a6f9-4b5e-8bc7-cc657216d5c4"></div>
+<div id="ffcaea04-4e0f-449f-bfa6-e3d7f55d8abe"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#b43d78ca-a6f9-4b5e-8bc7-cc657216d5c4');
+var element = $('#ffcaea04-4e0f-449f-bfa6-e3d7f55d8abe');
 
             setTimeout(function() {
                 var nbb_cell_id = 21;
@@ -2643,7 +2644,7 @@ var element = $('#b43d78ca-a6f9-4b5e-8bc7-cc657216d5c4');
 
 <footer>
 <p>
-  &copy; 2023  - This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/deed.en_US" target="_blank">Creative Commons Attribution-ShareAlike</a>
+  &copy; 2024  - This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/deed.en_US" target="_blank">Creative Commons Attribution-ShareAlike</a>
 </p>
 <p>
 Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a href="http://bit.ly/flex-pelican" target="_blank">Flex</a> theme
