--- a/categories.html
+++ b/categories.html
@@ -176,6 +176,9 @@ rel="me"           href="https://fosstodon.org/@leblancfg"
         <a href="https://leblancfg.com/category/python-sql-ms.html">Python, SQL, MS</a> (1)
       </li>
       <li>
+        <a href="https://leblancfg.com/category/rust.html">Rust</a> (1)
+      </li>
+      <li>
         <a href="https://leblancfg.com/category/tmux.html">Tmux</a> (1)
       </li>
       <li>
@@ -187,7 +190,7 @@ rel="me"           href="https://fosstodon.org/@leblancfg"
 
 <footer>
 <p>
-  &copy; 2023  - This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/deed.en_US" target="_blank">Creative Commons Attribution-ShareAlike</a>
+  &copy; 2024  - This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/deed.en_US" target="_blank">Creative Commons Attribution-ShareAlike</a>
 </p>
 <p>
 Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a href="http://bit.ly/flex-pelican" target="_blank">Flex</a> theme
