--- a/first-steps-with-rust.html
+++ b/first-steps-with-rust.html
@@ -416,7 +416,7 @@ parallelism when sensible, based on work-load at runtime.</p>
 
 <h1>Conclusion</h1>
 <blockquote>
-<p><a href="https://github.com/leblancfg/sqlf/tree/f05b8f4a56a4b1cd45cbd1d1cb18978842e17200">Take a look at the whole repo at this point in the process here</a></p>
+<p>Take a look at <a href="https://github.com/leblancfg/sqlf/tree/f05b8f4a56a4b1cd45cbd1d1cb18978842e17200">the whole repo at this point in the process here 🔗</a></p>
 </blockquote>
 <p>All very interesting! Nothing here we couldn't do with Python or Ruby quite
 yet, but very interesting set of first steps. I'm actually surprised by the
