Generate Pelican site

--- a/first-steps-with-rust.html
+++ b/first-steps-with-rust.html
@@ -186,6 +186,9 @@ Rust, I'm just chronicling my own learning process, warts and all. I believe in
 the power of learning by teaching and sharing, and though this document may not
 offer groundbreaking insights, it certainly serves as a practical account of
 one developer's journey through the, uh, "intriguing" complexities of Rust.</p>
+<blockquote>
+<p>Take a look at <a href="https://github.com/leblancfg/sqlf/tree/f05b8f4a56a4b1cd45cbd1d1cb18978842e17200">the code in the repo here 🔗</a></p>
+</blockquote>
 <h1>Installation</h1>
 <p>I'm on a Mac and considered installing Rust using <code>brew</code>, but the official
 installation instructions are so simple that I decided to go with that. I ran
