Generate Pelican site

--- a/tags.html
+++ b/tags.html
@@ -184,6 +184,7 @@ rel="me"           href="https://fosstodon.org/@leblancfg"
           <li><a href="https://leblancfg.com/tag/manjaro.html">manjaro</a> (2)</li>
           <li><a href="https://leblancfg.com/tag/matplotlib.html">matplotlib</a> (2)</li>
           <li><a href="https://leblancfg.com/tag/mutability.html">mutability</a> (1)</li>
+          <li><a href="https://leblancfg.com/tag/neovim.html">neovim</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/nerdtree.html">nerdtree</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/numpy.html">numpy</a> (5)</li>
           <li><a href="https://leblancfg.com/tag/nvidia.html">nvidia</a> (1)</li>
@@ -200,7 +201,7 @@ rel="me"           href="https://fosstodon.org/@leblancfg"
           <li><a href="https://leblancfg.com/tag/terminal.html">terminal</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/tmux.html">tmux</a> (1)</li>
           <li><a href="https://leblancfg.com/tag/unix.html">unix</a> (1)</li>
-          <li><a href="https://leblancfg.com/tag/vim.html">vim</a> (2)</li>
+          <li><a href="https://leblancfg.com/tag/vim.html">vim</a> (3)</li>
           <li><a href="https://leblancfg.com/tag/zsh.html">zsh</a> (1)</li>
     </ul>
   </div>
@@ -208,7 +209,7 @@ rel="me"           href="https://fosstodon.org/@leblancfg"
 
 <footer>
 <p>
-  &copy; 2024  - This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/deed.en_US" target="_blank">Creative Commons Attribution-ShareAlike</a>
+  &copy; 2025  - This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/deed.en_US" target="_blank">Creative Commons Attribution-ShareAlike</a>
 </p>
 <p>
 Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a href="http://bit.ly/flex-pelican" target="_blank">Flex</a> theme
