--- a/archives.html
+++ b/archives.html
@@ -158,6 +158,11 @@ rel="me"           href="https://fosstodon.org/@leblancfg"
   <div>
     <dl>
 
+          <dt>January 29, 2025</dt>
+
+        <dd>
+          <a href="https://leblancfg.com/i-miss-vim.html">I miss vim</a>
+        </dd>
           <dt>May 13, 2024</dt>
 
         <dd>
@@ -249,7 +254,7 @@ rel="me"           href="https://fosstodon.org/@leblancfg"
 
 <footer>
 <p>
-  &copy; 2024  - This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/deed.en_US" target="_blank">Creative Commons Attribution-ShareAlike</a>
+  &copy; 2025  - This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/deed.en_US" target="_blank">Creative Commons Attribution-ShareAlike</a>
 </p>
 <p>
 Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a href="http://bit.ly/flex-pelican" target="_blank">Flex</a> theme
