--- a/benchmarks_writing_pandas_dataframe_SQL_Server.html
+++ b/benchmarks_writing_pandas_dataframe_SQL_Server.html
@@ -1223,9 +1223,9 @@ span.linenos.special { color: #000000; background-color: #ffffc0; padding-left: 
  .highlight pre  .hll { background-color: #ffffcc }
  .highlight pre  { background: #f8f8f8; }
  .highlight pre  .c { color: #3D7B7B; font-style: italic } /* Comment */
- .highlight pre  .err { border: 1px solid #FF0000 } /* Error */
+ .highlight pre  .err { border: 1px solid #F00 } /* Error */
  .highlight pre  .k { color: #008000; font-weight: bold } /* Keyword */
- .highlight pre  .o { color: #666666 } /* Operator */
+ .highlight pre  .o { color: #666 } /* Operator */
  .highlight pre  .ch { color: #3D7B7B; font-style: italic } /* Comment.Hashbang */
  .highlight pre  .cm { color: #3D7B7B; font-style: italic } /* Comment.Multiline */
  .highlight pre  .cp { color: #9C6500 } /* Comment.Preproc */
@@ -1242,34 +1242,34 @@ span.linenos.special { color: #000000; background-color: #ffffc0; padding-left: 
  .highlight pre  .gp { color: #000080; font-weight: bold } /* Generic.Prompt */
  .highlight pre  .gs { font-weight: bold } /* Generic.Strong */
  .highlight pre  .gu { color: #800080; font-weight: bold } /* Generic.Subheading */
- .highlight pre  .gt { color: #0044DD } /* Generic.Traceback */
+ .highlight pre  .gt { color: #04D } /* Generic.Traceback */
  .highlight pre  .kc { color: #008000; font-weight: bold } /* Keyword.Constant */
  .highlight pre  .kd { color: #008000; font-weight: bold } /* Keyword.Declaration */
  .highlight pre  .kn { color: #008000; font-weight: bold } /* Keyword.Namespace */
  .highlight pre  .kp { color: #008000 } /* Keyword.Pseudo */
  .highlight pre  .kr { color: #008000; font-weight: bold } /* Keyword.Reserved */
  .highlight pre  .kt { color: #B00040 } /* Keyword.Type */
- .highlight pre  .m { color: #666666 } /* Literal.Number */
+ .highlight pre  .m { color: #666 } /* Literal.Number */
  .highlight pre  .s { color: #BA2121 } /* Literal.String */
  .highlight pre  .na { color: #687822 } /* Name.Attribute */
  .highlight pre  .nb { color: #008000 } /* Name.Builtin */
- .highlight pre  .nc { color: #0000FF; font-weight: bold } /* Name.Class */
- .highlight pre  .no { color: #880000 } /* Name.Constant */
- .highlight pre  .nd { color: #AA22FF } /* Name.Decorator */
+ .highlight pre  .nc { color: #00F; font-weight: bold } /* Name.Class */
+ .highlight pre  .no { color: #800 } /* Name.Constant */
+ .highlight pre  .nd { color: #A2F } /* Name.Decorator */
  .highlight pre  .ni { color: #717171; font-weight: bold } /* Name.Entity */
  .highlight pre  .ne { color: #CB3F38; font-weight: bold } /* Name.Exception */
- .highlight pre  .nf { color: #0000FF } /* Name.Function */
+ .highlight pre  .nf { color: #00F } /* Name.Function */
  .highlight pre  .nl { color: #767600 } /* Name.Label */
- .highlight pre  .nn { color: #0000FF; font-weight: bold } /* Name.Namespace */
+ .highlight pre  .nn { color: #00F; font-weight: bold } /* Name.Namespace */
  .highlight pre  .nt { color: #008000; font-weight: bold } /* Name.Tag */
  .highlight pre  .nv { color: #19177C } /* Name.Variable */
- .highlight pre  .ow { color: #AA22FF; font-weight: bold } /* Operator.Word */
- .highlight pre  .w { color: #bbbbbb } /* Text.Whitespace */
- .highlight pre  .mb { color: #666666 } /* Literal.Number.Bin */
- .highlight pre  .mf { color: #666666 } /* Literal.Number.Float */
- .highlight pre  .mh { color: #666666 } /* Literal.Number.Hex */
- .highlight pre  .mi { color: #666666 } /* Literal.Number.Integer */
- .highlight pre  .mo { color: #666666 } /* Literal.Number.Oct */
+ .highlight pre  .ow { color: #A2F; font-weight: bold } /* Operator.Word */
+ .highlight pre  .w { color: #BBB } /* Text.Whitespace */
+ .highlight pre  .mb { color: #666 } /* Literal.Number.Bin */
+ .highlight pre  .mf { color: #666 } /* Literal.Number.Float */
+ .highlight pre  .mh { color: #666 } /* Literal.Number.Hex */
+ .highlight pre  .mi { color: #666 } /* Literal.Number.Integer */
+ .highlight pre  .mo { color: #666 } /* Literal.Number.Oct */
  .highlight pre  .sa { color: #BA2121 } /* Literal.String.Affix */
  .highlight pre  .sb { color: #BA2121 } /* Literal.String.Backtick */
  .highlight pre  .sc { color: #BA2121 } /* Literal.String.Char */
@@ -1284,12 +1284,12 @@ span.linenos.special { color: #000000; background-color: #ffffc0; padding-left: 
  .highlight pre  .s1 { color: #BA2121 } /* Literal.String.Single */
  .highlight pre  .ss { color: #19177C } /* Literal.String.Symbol */
  .highlight pre  .bp { color: #008000 } /* Name.Builtin.Pseudo */
- .highlight pre  .fm { color: #0000FF } /* Name.Function.Magic */
+ .highlight pre  .fm { color: #00F } /* Name.Function.Magic */
  .highlight pre  .vc { color: #19177C } /* Name.Variable.Class */
  .highlight pre  .vg { color: #19177C } /* Name.Variable.Global */
  .highlight pre  .vi { color: #19177C } /* Name.Variable.Instance */
  .highlight pre  .vm { color: #19177C } /* Name.Variable.Magic */
- .highlight pre  .il { color: #666666 } /* Literal.Number.Integer.Long */</style><div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
+ .highlight pre  .il { color: #666 } /* Literal.Number.Integer.Long */</style><div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <h1 id="Speed-tests-for-writing-to-MSSQL-from-pandas-(ODBC)">Speed tests for writing to MSSQL from pandas (ODBC)<a class="anchor-link" href="#Speed-tests-for-writing-to-MSSQL-from-pandas-(ODBC)">&#182;</a></h1><p>In this notebook, we'll be playing with various methods of writing data to a Microsoft SQL Server database. Compared to PostgreSQL, which I was using previously, the connection is approximately an order of magnitude slower. This is apparently a known issue. It boggles the mind why, and I might not be searching deep enough to understand the reasons for this, but it's something I can't work around.</p>
@@ -1340,18 +1340,18 @@ span.linenos.special { color: #000000; background-color: #ffffc0; padding-left: 
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="o">%</span><span class="k">load_ext</span> nb_black
 
-<span class="kn">import</span> <span class="nn">json</span>
-<span class="kn">from</span> <span class="nn">os.path</span> <span class="kn">import</span> <span class="n">expanduser</span>
-<span class="kn">import</span> <span class="nn">math</span>
-<span class="kn">import</span> <span class="nn">sys</span>
+<span class="kn">import</span><span class="w"> </span><span class="nn">json</span>
+<span class="kn">from</span><span class="w"> </span><span class="nn">os.path</span><span class="w"> </span><span class="kn">import</span> <span class="n">expanduser</span>
+<span class="kn">import</span><span class="w"> </span><span class="nn">math</span>
+<span class="kn">import</span><span class="w"> </span><span class="nn">sys</span>
 
-<span class="kn">import</span> <span class="nn">matplotlib.pyplot</span> <span class="k">as</span> <span class="nn">plt</span>
-<span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
-<span class="kn">import</span> <span class="nn">pandas</span> <span class="k">as</span> <span class="nn">pd</span>
+<span class="kn">import</span><span class="w"> </span><span class="nn">matplotlib.pyplot</span><span class="w"> </span><span class="k">as</span><span class="w"> </span><span class="nn">plt</span>
+<span class="kn">import</span><span class="w"> </span><span class="nn">numpy</span><span class="w"> </span><span class="k">as</span><span class="w"> </span><span class="nn">np</span>
+<span class="kn">import</span><span class="w"> </span><span class="nn">pandas</span><span class="w"> </span><span class="k">as</span><span class="w"> </span><span class="nn">pd</span>
 
-<span class="kn">import</span> <span class="nn">pymssql</span> <span class="k">as</span> <span class="nn">ms</span>
-<span class="kn">import</span> <span class="nn">sqlalchemy</span> <span class="k">as</span> <span class="nn">sql</span>
-<span class="kn">import</span> <span class="nn">sqlalchemy_turbodbc</span> <span class="k">as</span> <span class="nn">st</span>
+<span class="kn">import</span><span class="w"> </span><span class="nn">pymssql</span><span class="w"> </span><span class="k">as</span><span class="w"> </span><span class="nn">ms</span>
+<span class="kn">import</span><span class="w"> </span><span class="nn">sqlalchemy</span><span class="w"> </span><span class="k">as</span><span class="w"> </span><span class="nn">sql</span>
+<span class="kn">import</span><span class="w"> </span><span class="nn">sqlalchemy_turbodbc</span><span class="w"> </span><span class="k">as</span><span class="w"> </span><span class="nn">st</span>
 </pre></div>
 
     </div>
@@ -1382,10 +1382,10 @@ span.linenos.special { color: #000000; background-color: #ffffc0; padding-left: 
 
 
 
-<div id="df667fb3-1c2b-4c1c-b5b6-4f4d1f8126bc"></div>
+<div id="b13c0190-d230-4971-923e-22dbdc2616e2"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#df667fb3-1c2b-4c1c-b5b6-4f4d1f8126bc');
+var element = $('#b13c0190-d230-4971-923e-22dbdc2616e2');
 
             setTimeout(function() {
                 var nbb_cell_id = 1;
@@ -1469,10 +1469,10 @@ No sqlalchemy_turbodbc version available
 
 
 
-<div id="5749d604-2a6d-43e8-8f72-fc1690089bab"></div>
+<div id="e2c9a97c-a835-469d-bc06-676613675b1e"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#5749d604-2a6d-43e8-8f72-fc1690089bab');
+var element = $('#e2c9a97c-a835-469d-bc06-676613675b1e');
 
             setTimeout(function() {
                 var nbb_cell_id = 20;
@@ -1539,10 +1539,10 @@ var element = $('#5749d604-2a6d-43e8-8f72-fc1690089bab');
 
 
 
-<div id="7df389ac-534f-4f80-8fc5-ac1472669ca6"></div>
+<div id="fef61592-a5de-42e4-80ec-e647b17a2bd3"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#7df389ac-534f-4f80-8fc5-ac1472669ca6');
+var element = $('#fef61592-a5de-42e4-80ec-e647b17a2bd3');
 
             setTimeout(function() {
                 var nbb_cell_id = 3;
@@ -1720,10 +1720,10 @@ var element = $('#7df389ac-534f-4f80-8fc5-ac1472669ca6');
 
 
 
-<div id="59aab568-9f67-471e-aff0-c285915c2881"></div>
+<div id="722d56be-a06a-4a57-bd27-1fe365619f46"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#59aab568-9f67-471e-aff0-c285915c2881');
+var element = $('#722d56be-a06a-4a57-bd27-1fe365619f46');
 
             setTimeout(function() {
                 var nbb_cell_id = 4;
@@ -1781,10 +1781,10 @@ var element = $('#59aab568-9f67-471e-aff0-c285915c2881');
 
 
 
-<div id="494dc110-bb7a-425e-84df-4db82ec6fd07"></div>
+<div id="ec6427c8-9442-4a71-ae7f-7f26e35be736"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#494dc110-bb7a-425e-84df-4db82ec6fd07');
+var element = $('#ec6427c8-9442-4a71-ae7f-7f26e35be736');
 
             setTimeout(function() {
                 var nbb_cell_id = 5;
@@ -1858,10 +1858,10 @@ var element = $('#494dc110-bb7a-425e-84df-4db82ec6fd07');
 
 
 
-<div id="cc6d51e1-8c12-4fae-9de8-1abce7692f95"></div>
+<div id="45faf810-8841-4904-a7c6-56ae2324d2b7"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#cc6d51e1-8c12-4fae-9de8-1abce7692f95');
+var element = $('#45faf810-8841-4904-a7c6-56ae2324d2b7');
 
             setTimeout(function() {
                 var nbb_cell_id = 6;
@@ -1899,11 +1899,11 @@ var element = $('#cc6d51e1-8c12-4fae-9de8-1abce7692f95');
 <div class="prompt input_prompt">In&nbsp;[7]:</div>
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="k">def</span> <span class="nf">chunker</span><span class="p">(</span><span class="n">seq</span><span class="p">,</span> <span class="n">size</span><span class="p">):</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="k">def</span><span class="w"> </span><span class="nf">chunker</span><span class="p">(</span><span class="n">seq</span><span class="p">,</span> <span class="n">size</span><span class="p">):</span>
     <span class="k">return</span> <span class="p">(</span><span class="n">seq</span><span class="p">[</span><span class="n">pos</span> <span class="p">:</span> <span class="n">pos</span> <span class="o">+</span> <span class="n">size</span><span class="p">]</span> <span class="k">for</span> <span class="n">pos</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="mi">0</span><span class="p">,</span> <span class="nb">len</span><span class="p">(</span><span class="n">seq</span><span class="p">),</span> <span class="n">size</span><span class="p">))</span>
 
 
-<span class="k">def</span> <span class="nf">insert_with_progress</span><span class="p">(</span><span class="n">df</span><span class="p">,</span> <span class="n">engine</span><span class="p">,</span> <span class="n">table</span><span class="o">=</span><span class="s2">&quot;&quot;</span><span class="p">,</span> <span class="n">schema</span><span class="o">=</span><span class="s2">&quot;&quot;</span><span class="p">):</span>
+<span class="k">def</span><span class="w"> </span><span class="nf">insert_with_progress</span><span class="p">(</span><span class="n">df</span><span class="p">,</span> <span class="n">engine</span><span class="p">,</span> <span class="n">table</span><span class="o">=</span><span class="s2">&quot;&quot;</span><span class="p">,</span> <span class="n">schema</span><span class="o">=</span><span class="s2">&quot;&quot;</span><span class="p">):</span>
     <span class="n">con</span> <span class="o">=</span> <span class="n">engine</span><span class="o">.</span><span class="n">connect</span><span class="p">()</span>
 
     <span class="c1"># Replace table</span>
@@ -1940,10 +1940,10 @@ var element = $('#cc6d51e1-8c12-4fae-9de8-1abce7692f95');
 
 
 
-<div id="479f9f95-93c1-4d38-bde6-c477064fad64"></div>
+<div id="ff6c8434-acba-497d-9b78-e4300c1c261e"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#479f9f95-93c1-4d38-bde6-c477064fad64');
+var element = $('#ff6c8434-acba-497d-9b78-e4300c1c261e');
 
             setTimeout(function() {
                 var nbb_cell_id = 7;
@@ -2005,10 +2005,10 @@ var element = $('#479f9f95-93c1-4d38-bde6-c477064fad64');
 
 
 
-<div id="9031e97a-8fb2-4ace-b537-b7288b2347aa"></div>
+<div id="f89de7d5-d0dd-465b-ad24-aadb38a1515e"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#9031e97a-8fb2-4ace-b537-b7288b2347aa');
+var element = $('#f89de7d5-d0dd-465b-ad24-aadb38a1515e');
 
             setTimeout(function() {
                 var nbb_cell_id = 8;
@@ -2076,10 +2076,10 @@ var element = $('#9031e97a-8fb2-4ace-b537-b7288b2347aa');
 
 
 
-<div id="64803d24-5246-4e52-b9f0-02f6a9dddb59"></div>
+<div id="2c05cd53-9f64-497b-952a-5495e0bbdcdd"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#64803d24-5246-4e52-b9f0-02f6a9dddb59');
+var element = $('#2c05cd53-9f64-497b-952a-5495e0bbdcdd');
 
             setTimeout(function() {
                 var nbb_cell_id = 9;
@@ -2154,10 +2154,10 @@ var element = $('#64803d24-5246-4e52-b9f0-02f6a9dddb59');
 
 
 
-<div id="399a9769-a498-4985-a440-87ac56eafe2f"></div>
+<div id="30c30d36-ceb4-44d7-97c8-6ba0d8824fea"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#399a9769-a498-4985-a440-87ac56eafe2f');
+var element = $('#30c30d36-ceb4-44d7-97c8-6ba0d8824fea');
 
             setTimeout(function() {
                 var nbb_cell_id = 10;
@@ -2232,10 +2232,10 @@ var element = $('#399a9769-a498-4985-a440-87ac56eafe2f');
 
 
 
-<div id="0c6b85d9-e273-4dae-a61c-c7f17b18752e"></div>
+<div id="94b28cb2-ae5a-47ae-8e88-c98d71bbb0f3"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#0c6b85d9-e273-4dae-a61c-c7f17b18752e');
+var element = $('#94b28cb2-ae5a-47ae-8e88-c98d71bbb0f3');
 
             setTimeout(function() {
                 var nbb_cell_id = 11;
@@ -2311,10 +2311,10 @@ var element = $('#0c6b85d9-e273-4dae-a61c-c7f17b18752e');
 
 
 
-<div id="d0393a52-f29c-481e-8ed2-d92612aab8f0"></div>
+<div id="59f056a6-eb19-4ca4-8dc5-3ba3e13e7cb4"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#d0393a52-f29c-481e-8ed2-d92612aab8f0');
+var element = $('#59f056a6-eb19-4ca4-8dc5-3ba3e13e7cb4');
 
             setTimeout(function() {
                 var nbb_cell_id = 12;
@@ -2382,10 +2382,10 @@ var element = $('#d0393a52-f29c-481e-8ed2-d92612aab8f0');
 
 
 
-<div id="62b815ce-1978-4c09-a0ba-d9ca03615476"></div>
+<div id="07176ce2-5487-43e1-8fbf-ca000e1ce109"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#62b815ce-1978-4c09-a0ba-d9ca03615476');
+var element = $('#07176ce2-5487-43e1-8fbf-ca000e1ce109');
 
             setTimeout(function() {
                 var nbb_cell_id = 13;
@@ -2452,10 +2452,10 @@ var element = $('#62b815ce-1978-4c09-a0ba-d9ca03615476');
 
 
 
-<div id="c945f5cf-192d-462d-9337-034ddddd6381"></div>
+<div id="868e9d84-5dff-4c94-a81b-8f6c8610dd03"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#c945f5cf-192d-462d-9337-034ddddd6381');
+var element = $('#868e9d84-5dff-4c94-a81b-8f6c8610dd03');
 
             setTimeout(function() {
                 var nbb_cell_id = 14;
@@ -2555,10 +2555,10 @@ var element = $('#c945f5cf-192d-462d-9337-034ddddd6381');
 
 
 
-<div id="a69fb52f-daec-46eb-8ecb-a1f4d92da00c"></div>
+<div id="e90d0660-313f-48b5-956b-ceffa2ad5f23"></div>
 <div class="output_subarea output_javascript ">
 <script type="text/javascript">
-var element = $('#a69fb52f-daec-46eb-8ecb-a1f4d92da00c');
+var element = $('#e90d0660-313f-48b5-956b-ceffa2ad5f23');
 
             setTimeout(function() {
                 var nbb_cell_id = 21;
@@ -2644,7 +2644,7 @@ var element = $('#a69fb52f-daec-46eb-8ecb-a1f4d92da00c');
 
 <footer>
 <p>
-  &copy; 2024  - This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/deed.en_US" target="_blank">Creative Commons Attribution-ShareAlike</a>
+  &copy; 2025  - This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/deed.en_US" target="_blank">Creative Commons Attribution-ShareAlike</a>
 </p>
 <p>
 Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a href="http://bit.ly/flex-pelican" target="_blank">Flex</a> theme
