--- a/categories.html
+++ b/categories.html
@@ -182,7 +182,7 @@ rel="me"           href="https://fosstodon.org/@leblancfg"
         <a href="https://leblancfg.com/category/tmux.html">Tmux</a> (1)
       </li>
       <li>
-        <a href="https://leblancfg.com/category/vim.html">Vim</a> (1)
+        <a href="https://leblancfg.com/category/vim.html">vim</a> (2)
       </li>
     </ul>
   </div>
@@ -190,7 +190,7 @@ rel="me"           href="https://fosstodon.org/@leblancfg"
 
 <footer>
 <p>
-  &copy; 2024  - This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/deed.en_US" target="_blank">Creative Commons Attribution-ShareAlike</a>
+  &copy; 2025  - This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/deed.en_US" target="_blank">Creative Commons Attribution-ShareAlike</a>
 </p>
 <p>
 Built with <a href="http://getpelican.com" target="_blank">Pelican</a> using <a href="http://bit.ly/flex-pelican" target="_blank">Flex</a> theme
